# unhinged-twitter-bot

./: .env.dev  .gitignore  .ruff.toml  Dockerfile.agents  Dockerfile.batch_ingest_subscriber  Dockerfile.tweet_embedding_service  README.md  docker-compose.yml  hello.py  personality.yaml  pyproject.toml  requirements.txt  tweet_search.py
agent/: agent.py
data/: load_data.py  twitter_data_collector.py
data/agent-logs/jay_simulation_0/: session_Quantum Quirksmith_1932ce6d-a68a-4402-b932-b3e9e5163248.jsonl  session_Quantum Quirksmith_30fd9a10-8c42-4278-85e0-a0c6486315c0.jsonl  session_Quantum Quirksmith_3b38a69a-e713-4b25-994d-26278ce39581.jsonl  session_Quantum Quirksmith_49dfe6ad-9f33-4651-a28f-abc4523fa4a0.jsonl  session_Quantum Quirksmith_4eae1681-1e2f-4abc-bcad-48fd9d26e5fa.jsonl  session_Quantum Quirksmith_59c7595b-f45e-49aa-9be4-6f43777c67d1.jsonl  session_Quantum Quirksmith_5aafc3a3-9bcf-44bc-a7ed-cefd91bbeddb.jsonl  session_Quantum Quirksmith_5b26b52d-3248-4d03-a8bd-47a1f3222fec.jsonl  session_Quantum Quirksmith_5b4464cc-c8e6-4066-85ce-ee20036686b8.jsonl  session_Quantum Quirksmith_5edd1b65-7b8a-4d04-8ce5-783d42854f88.jsonl  (+66 more)
data/datasets/: authors_data_20250313_151002.json  topics_data_20250313_145824.json  twitter_data_20250312_164318.json
data/simulation_tweets/: some_startup_tweets.txt  startup_tweets_v2.txt
notebooks/: demo.ipynb  exploration.ipynb  jay.ipynb
profiles/profile-set-088c47c2-05a4-411f-8aa6-bc4656ce68e2/: Quantum_Quirksmith.yaml  Quirky_Quantum.yaml  Toasted_Entrepreneurial_Spirits.yaml  profile_generation_metadata.yaml
scripts/: README.md  batch_publish_tweets.py  events.py  example_agent_logging.py  test_tweet_publisher.py
services/: delete_lancedb_table.py  tweet_embedding_service.py  view_lancedb_data.py
unhinged_twitter_bot/: __main__.py  activity_logging.py  agent.py  config.py  cringe_detector.py  orchestrator.py  personality_generator.py  simulation.py  twitter.py
unhinged_twitter_bot/batch_ingest_subscriber/: main.py
(+259 files in other folders)
