[project]
name = "unhinged-twitter-bot"
version = "0.1.0"
description = "An unhinged Twitter bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "getdaft>=0.4.7",
    "instructor>=1.7.4",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.10",
    "lancedb>=0.21.1",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "pydantic-to-pyarrow>=0.1.6",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "sentence-transformers>=3.4.1",
    "tweepy>=4.15.0",
]

[project.scripts]
events = "scripts.events:main"
simulate = "unhinged_twitter_bot.simulation:main"
seed = "data.load_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.0.2",
]
